fix: Make the focus ring on selects more visible

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,9 @@ header {
   line-height: 40px;
   font-family: 'Playfair Display', serif;
 }
+header a:hover {
+  color: white;
+}
 main {
   background-color: #f3f3f3;
   display: flex;
@@ -141,6 +144,9 @@ nav h1 a {
   margin: 10px;
   padding: 0 10px;
   width: calc(100% - 20px); /* 100% minus padding */
+}
+.filter-options select:focus {
+    border: 2px solid #000;
 }
 
 /* ====================== Restaurant Listing ====================== */
